# jet-lag-mobile

./: .gitignore  Cargo.toml  deps.md  flake.nix
.cargo/: config.toml
.direnv/: flake-profile  flake-profile-24-link  flake-profile-30-link  flake-profile-9-link
android/: push-file.nu  run.nu
android/app/: build.gradle.kts
android/app/src/cpp/: CMakeLists.txt  customLayer.cpp  customLayer.hpp
crates/core/: Cargo.toml  build.rs
crates/core/src/: lib.rs
crates/core/src/hide_and_seek/: mod.rs
crates/core/src/map/: mod.rs
crates/core/src/person/: mod.rs
crates/core/src/resource/: bundle.rs  fetcher.rs  mod.rs  reference.rs  store.rs
crates/core/src/shape/: bvh.rs  compiler.rs  instruction.rs  mod.rs  types.rs
crates/mobile/: Cargo.toml
crates/mobile/assets/: libre-theme.json
crates/mobile/src/: android.rs  lib.rs
crates/mobile/src/layers/: mod.rs
crates/mobile/src/layers/oob/: android.rs  traverse_quadtree.rs
crates/mobile/src/layers/test_square/: android.rs
crates/mobile/src/layers/transit/: android.rs
crates/mobile/src/render/: fragment.wgsl  mod.rs  style.rs  thread.rs
crates/mobile/src/state/view/: mod.rs
crates/mobile/src/state/view/map/: mod.rs  source.rs
crates/mobile/src/tile_server/: mod.rs  routes.rs
crates/mobile/src/transit/: android.rs
data/: complexes.geojson  nyc_bounds.geojson  nyc_tiles.pmtiles
tools/pmtiles-clip/: Cargo.toml  README.md  example-boundary.geojson
tools/pmtiles-clip/.claude/: settings.local.json
tools/pmtiles-clip/proto/: vector_tile.proto
tools/pmtiles-clip/src/: main.rs  vector_tile.rs
(+32 files in other folders)
