[package]
name = "pmtiles-clip"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pmtiles-clip"
path = "src/main.rs"

[dependencies]
geojson = "0.24"
geo = "0.28"
geo-types = "0.7"
prost = "0.13"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
walkdir = "2.5"
pmtiles = { version = "0.18.2", features = ["mmap-async-tokio"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }

# Build dependencies removed - using pre-included vector tile module instead
